2013-02-28  Peter Bloomfield

	* src/main-window.c: survive torture test.

2013-02-28  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_msgno_filt_check),
	(lbm_msgno_filt_check_idle_cb),
	(libbalsa_mailbox_msgno_filt_check): check message against view
	filter synchronously when in the main thread.

2013-02-28  Pawel Salek

	* configure.ac: remove dependency on legacy gnome-icon-scheme pkg.
	* NEWS, configure.ac: release balsa-2.5.0

2013-02-28  Peter Bloomfield

	* libbalsa/mailbox.c: build with threads disabled.

2013-02-27  Peter Bloomfield

	* libbalsa/mailbox.c (lbm_run_filters_on_reception_idle_cb),
	(libbalsa_mailbox_run_filters_on_reception): run filters in an
	idle callback.

2013-02-26  Peter Bloomfield

	* src/main-window.c: do not use another idle handler to set the
	mailbox view-filter.

2013-02-26  Peter Bloomfield

	Instead of forgetting open mailboxes, do not remember them in
	the first place.

	* src/balsa-app.c (append_url_if_open): revert.
	* src/main.c (scan_mailboxes_idle_cb): ditto.
	* src/save-restore.c (save_view): remember open mailbox only if
	balsa_app.remember_open_mboxes.

2013-02-26  Peter Bloomfield

	* src/balsa-app.c (ask_password): use a mutex to make sure that
	only one dialog pops up at a time.

2013-02-26  Peter Bloomfield

	* libbalsa/mailbox_local.c (lbm_local_save_tree_real),
	(lbm_local_queue_save_tree): check that the message tree has
	changed in the idle handler, instead of in the scheduler.

2013-02-26  Peter Bloomfield

	* src/balsa-app.c (append_url_if_open): in_sync is gboolean.

2013-02-26  Peter Bloomfield

	* src/balsa-app.c (append_url_if_open): mark view out-of-sync
	only if it really is.

2013-02-26  Peter Bloomfield

	* src/balsa-app.c (append_url_if_open),
	(open_mailboxes_idle_cb): if we are not remembering open
	mailboxes, forget them.
	* src/main.c (scan_mailboxes_idle_cb): always call
	open_mailboxes_idle_cb so we can forget them.

2013-02-25  Peter Bloomfield
